--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 
-body {
+ body {
     color: #333333;
     font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
 }
@@ -8,7 +8,7 @@ body {
 #header {
     width: 100%;
     height: 70px;
-    background-color: #333333;
+    background-color: rgba(0,0,0,0.8);
 }
 
 #content {
@@ -61,14 +61,12 @@ td {
     padding: 10px 2%;
 }
 
-button {
+/*  button {
     font-size: 14px;
     padding: 5px 10px;
-}
+} */
 
-#footer {
-    text-align: center;
-}
+
 
 #flush_success {
     width: 100%;
@@ -165,4 +163,80 @@ pre {
 
 h3 {
     font-size: larger;
+}
+#footer{
+    background-color: #f5f5f7;
+    padding-top:70px;
+    font-size: 15px;
+    width: 100%;
+    color: #1d1d1f;
+    text-align: center;
+    padding: 30px 0;
+    position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
+
+}
+
+#wrapper {
+    min-height: 100vh;
+    position: relative;/*←相対位置*/
+    padding-bottom: 120px;/*←footerの高さ*/
+    box-sizing: border-box;
+}
+
+
+#top {
+    float: left;
+    margin-bottom: 25px;
+    margin-top: 20px;
+}
+
+
+#button-1 {
+  /* display       : inline-block; */
+  /* border-radius : 5%;
+  font-size     : 15pt;
+  text-align    : center;
+  background    : #007fff;
+  color         : #ffffff;
+  line-height   : 1em;
+  opacity       : 0.9;
+  transition    : .3s; */
+  padding       : 6px 15px;
+  cursor        : pointer;
+  border: 2px solid #000;
+  border-radius: 0;
+  background: #fff;
+  font-size: 20px;
+  margin-top: 6px;
+
+}
+#button-1:hover {
+  /* opacity       : 1;           カーソル時透明度 */
+  background: #dcdcdc;
+
+}
+#button-2 {
+  /* display       : inline-block; */
+  /* border-radius : 5%;
+  font-size     : 15pt;
+  text-align    : center;
+  background    : #007fff;
+  color         : #ffffff;
+  line-height   : 1em;
+  opacity       : 0.9;
+  transition    : .3s; */
+  padding       : 6px 15px;
+  cursor        : pointer;
+  border: 2px solid #000;
+  border-radius: 0;
+  background: #dcdcdc;
+  font-size: 20px;
+  margin-top: 6px;
+
+}
+#button-2:hover {
+  /* opacity       : 1;           カーソル時透明度 */
+  background: #fff;
+
 }
